--- a/src/app/modules/home/header-section/slides/slide-contests/slide-contests.component.html
+++ b/src/app/modules/home/header-section/slides/slide-contests/slide-contests.component.html
@@ -1,11 +1,7 @@
-<!--
 <swiper [config]="contestsSwiperConfig" class="swiper-contests swiper-lazy-loading">
-  <div class="swiper-wrapper">
-    <div class="swiper-slide" *ngFor="let contest of contests">
-      <contest-card-big [contest]="contest"></contest-card-big>
-    </div>
+  <div class="swiper-slide" *ngFor="let contest of contests">
+    <contest-card-big [contest]="contest"></contest-card-big>
   </div>
-  &lt;!&ndash; Add Pagination &ndash;&gt;
+  <!-- Add Pagination -->
   <div class="swiper-pagination"></div>
 </swiper>
--->
