--- a/src/app/modules/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page.component.html
@@ -35,25 +35,23 @@
     </div>
   </div>
 
-<!--  <swiper [config]="swiperConfig" class="swiper swiper-lazy-loading" #swiper [style.height.px]="windowHeight-67">-->
-<!--    <div class="swiper-wrapper">-->
-<!--      <div class="swiper-slide">-->
-<!--        <slide-main [animationState]="slideMainAnimationState"></slide-main>-->
-<!--      </div>-->
-<!--      <div class="swiper-slide">-->
-<!--        <slide-learn [animationState]="slideLearnAnimationState"></slide-learn>-->
-<!--      </div>-->
-<!--      <div class="swiper-slide">-->
-<!--        <slide-practice [animationState]="slidePracticeAnimationState"></slide-practice>-->
-<!--      </div>-->
-<!--      <div class="swiper-slide">-->
-<!--        <slide-competitions [animationState]="slideCompetitionsAnimationState"></slide-competitions>-->
-<!--      </div>-->
-<!--      <div class="swiper-slide">-->
-<!--        <slide-statistics [animationState]="slideStatisticsAnimationState"></slide-statistics>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </swiper>-->
+  <swiper [config]="swiperConfig" class="swiper swiper-lazy-loading" #swiper [style.height.px]="windowHeight-67">
+    <div class="swiper-slide">
+      <slide-main [animationState]="slideMainAnimationState"></slide-main>
+    </div>
+    <div class="swiper-slide">
+      <slide-learn [animationState]="slideLearnAnimationState"></slide-learn>
+    </div>
+    <div class="swiper-slide">
+      <slide-practice [animationState]="slidePracticeAnimationState"></slide-practice>
+    </div>
+    <div class="swiper-slide">
+      <slide-competitions [animationState]="slideCompetitionsAnimationState"></slide-competitions>
+    </div>
+    <div class="swiper-slide">
+      <slide-statistics [animationState]="slideStatisticsAnimationState"></slide-statistics>
+    </div>
+  </swiper>
 
 </div>
 
