--- a/src/app/modules/problems/pages/problems/sections/section-study-plans/section-study-plans.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-study-plans/section-study-plans.component.html
@@ -2,12 +2,8 @@
   {{ 'StudyPlans' | translate }}
 </h3>
 
-<!--&lt;!&ndash;-->
-<!--<swiper *ngIf="swiperVisible" [config]="swiperConfig" class="mt-2">-->
-<!--  <div class="swiper-wrapper">-->
-<!--    <div class="swiper-slide" *ngFor="let studyPlan of studyPlans">-->
-<!--      <study-plan-card [studyPlan]="studyPlan"></study-plan-card>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</swiper>-->
-<!--&ndash;&gt;-->
+<swiper *ngIf="swiperVisible" [config]="swiperConfig" class="mt-2">
+  <div class="swiper-slide" *ngFor="let studyPlan of studyPlans">
+    <study-plan-card [studyPlan]="studyPlan"></study-plan-card>
+  </div>
+</swiper>
