--- a/src/app/modules/courses/course/course-lessons/course-lessons.component.html
+++ b/src/app/modules/courses/course/course-lessons/course-lessons.component.html
@@ -3,11 +3,9 @@
     {{ 'Lessons' | translate }}
   </div>
 
-<!--  <swiper [config]="lessonsSwiperConfig" class="swiper-lessons swiper-lazy-loading">-->
-<!--    <div class="swiper-wrapper">-->
-<!--      <div class="swiper-slide" *ngFor="let lesson of lessons">-->
-<!--        <lesson-card [lesson]="lesson"></lesson-card>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </swiper>-->
+  <swiper [config]="lessonsSwiperConfig" class="swiper-lessons swiper-lazy-loading">
+    <div class="swiper-slide" *ngFor="let lesson of lessons">
+      <lesson-card [lesson]="lesson"></lesson-card>
+    </div>
+  </swiper>
 </div>
