--- a/src/app/modules/home/news-section/news-section.component.html
+++ b/src/app/modules/home/news-section/news-section.component.html
@@ -1,5 +1,5 @@
 <div class="news-section">
-  <h3 class="ml-1 mb-2 font-weight-bolder">{{ 'LatestNews' | translate }} </h3>
+  <h3 class="ml-1 mb-2 font-weight-bolder">{{ 'LatestNews' | translate }}</h3>
   <div class="item" *ngIf="skeletonVisible">
     <ngx-skeleton-loader
       count="3"
@@ -9,14 +9,11 @@
     ></ngx-skeleton-loader>
   </div>
 
-  <!--<swiper *ngIf="!skeletonVisible" [config]="newsSwiperConfig" class="swiper swiper-lazy-loading" #newsSwiper>
-    <div class="swiper-wrapper">
-      <div [@fadeInRightOnEnter] class="swiper-slide" *ngFor="let news of lastNews">
-        <news-card [blog]="news.blog"></news-card>
-        <hr>
-      </div>
+  <swiper *ngIf="!skeletonVisible" [config]="newsSwiperConfig" #newsSwiper>
+    <div class="swiper-slide" [@fadeInRightOnEnter] *ngFor="let news of lastNews">
+      <news-card [blog]="news.blog"></news-card>
+      <hr>
     </div>
-    &lt;!&ndash; Add Pagination &ndash;&gt;
     <div class="swiper-pagination"></div>
-  </swiper>-->
+  </swiper>
 </div>
