--- a/src/app/modules/testing/testing.component.html
+++ b/src/app/modules/testing/testing.component.html
@@ -1,25 +1,21 @@
 <div class="row">
   <div class="col-12 mt-2 tests-page-top">
-<!--    <swiper [config]="testsSwiperConfig" class="swiper-tests swiper-lazy-loading">-->
-<!--      <div class="swiper-wrapper">-->
-<!--        <div class="swiper-slide" *ngFor="let test of lastTests">-->
-<!--          <test-card [test]="test"></test-card>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </swiper>-->
+    <swiper [config]="testsSwiperConfig" class="swiper-tests">
+      <div class="swiper-slide" *ngFor="let test of lastTests">
+        <test-card [test]="test"></test-card>
+      </div>
+    </swiper>
   </div>
   
   <div class="col-lg-10 offset-lg-1 col-12 offset-0">
     <div class="chapters">
-      <!--<swiper [config]="chaptersSwiperConfig" class="swiper-chapters swiper-lazy-loading">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide" *ngFor="let chapter of chapters">
-            <div class="chapter-card" [ngClass]="{'active': chapter.id == selectedChapter}">
-              <chapter-card (click)="selectedChapter=chapter.id;loadTests()" [chapter]="chapter"></chapter-card>
-            </div>
+      <swiper [config]="chaptersSwiperConfig" class="swiper-chapters swiper-lazy-loading">
+        <div class="swiper-slide" *ngFor="let chapter of chapters">
+          <div class="chapter-card" [ngClass]="{'active': chapter.id == selectedChapter}">
+            <chapter-card (click)="selectedChapter=chapter.id;loadTests()" [chapter]="chapter"></chapter-card>
           </div>
         </div>
-      </swiper>-->
+      </swiper>
     </div>
 
     <div class="tests-list">
