--- a/src/@core/scss/angular/libs/sweet-alerts.component.scss
+++ b/src/@core/scss/angular/libs/sweet-alerts.component.scss
@@ -1,5 +1,5 @@
 // animate scss
-@import '~animate.css/animate.min.css';
+@import 'animate.css/animate.min.css';
 
 // extended sweet-alerts scss
 @import '@core/scss/base/plugins/extensions/ext-component-sweet-alerts.scss';
