--- a/src/app/modules/contests/pages/user-contests/contest/contest-countdown/contest-countdown.component.html
+++ b/src/app/modules/contests/pages/user-contests/contest/contest-countdown/contest-countdown.component.html
@@ -1,29 +1,29 @@
 <div *ngIf="!contest.isFinished()">
-<!--  <ngx-countdown [time]="leftTime" [render]="render" format="DD:HH:mm:ss" (finish)="finish()">-->
-<!--    <ng-template #render let-data>-->
-<!--      <div class="d-flex justify-content-between">-->
-<!--        <div class="countdown text-center">-->
-<!--          <h5 class="clock-val" [ngStyle]="{'color': clockColor}">{{ data.fragments[0] }}</h5>-->
-<!--          <h5 class="text-white clock-text">{{ 'DAY' | translate }}</h5>-->
-<!--        </div>-->
-<!--    -->
-<!--        <div class="countdown text-center">-->
-<!--          <h5 class="clock-val" [ngStyle]="{'color': clockColor}">{{ data.fragments[1] }}</h5>-->
-<!--          <h5 class="text-white clock-text">{{ 'HOUR' | translate }}</h5>-->
-<!--        </div>-->
-<!--    -->
-<!--        <div class="countdown text-center">-->
-<!--          <h5 class="clock-val" [ngStyle]="{'color': clockColor}">{{ data.fragments[2] }}</h5>-->
-<!--          <h5 class="text-white clock-text">{{ 'MINUTE' | translate }}</h5>-->
-<!--        </div>-->
-<!--    -->
-<!--        <div class="countdown text-center">-->
-<!--          <h5 class="clock-val" [ngStyle]="{'color': clockColor}">{{ data.fragments[3] }}</h5>-->
-<!--          <h5 class="text-white clock-text">{{ 'SECOND' | translate }}</h5>-->
-<!--        </div>-->
-<!--      </div>    -->
-<!--    </ng-template>-->
-<!--  </ngx-countdown>-->
+  <ngx-countdown [time]="leftTime" [render]="render" format="DD:HH:mm:ss" (finish)="finish()">
+    <ng-template #render let-data>
+      <div class="d-flex justify-content-between">
+        <div class="countdown text-center">
+          <h5 class="clock-val" [ngStyle]="{'color': clockColor}">{{ data.fragments[0] }}</h5>
+          <h5 class="text-white clock-text">{{ 'DAY' | translate }}</h5>
+        </div>
+
+        <div class="countdown text-center">
+          <h5 class="clock-val" [ngStyle]="{'color': clockColor}">{{ data.fragments[1] }}</h5>
+          <h5 class="text-white clock-text">{{ 'HOUR' | translate }}</h5>
+        </div>
+
+        <div class="countdown text-center">
+          <h5 class="clock-val" [ngStyle]="{'color': clockColor}">{{ data.fragments[2] }}</h5>
+          <h5 class="text-white clock-text">{{ 'MINUTE' | translate }}</h5>
+        </div>
+
+        <div class="countdown text-center">
+          <h5 class="clock-val" [ngStyle]="{'color': clockColor}">{{ data.fragments[3] }}</h5>
+          <h5 class="text-white clock-text">{{ 'SECOND' | translate }}</h5>
+        </div>
+      </div>
+    </ng-template>
+  </ngx-countdown>
 </div>
 
 <ng-template #finishModal let-modal>
