--- a/src/app/modules/home/statistics-section/statistics-section.component.scss
+++ b/src/app/modules/home/statistics-section/statistics-section.component.scss
@@ -7,9 +7,15 @@
   height: 200px;
   margin-left: -2rem;
   width: calc(100% + 2rem);
-  background: linear-gradient(-45deg, mix(black, $primary, 10), $primary, mix(white, $primary, 15), mix(white, $primary, 30));
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  background: linear-gradient(to right, $primary, mix(white, $primary, 15));
+
+  @include dark-layout() {
+    background: linear-gradient(to right, mix(black, $primary, 15), mix(black, $primary, 30));
+
+    svg {
+      stroke: #161d31 !important;
+    }
+  }
 
   svg {
     position: absolute;
@@ -74,16 +80,6 @@
       span {
         font-size: 0.75rem;
       }
-    }
-  }
-}
-
-::ng-deep .dark-layout {
-  .footer {
-    background: linear-gradient(45deg, mix(black, $primary, 60), mix(black, $primary, 40), mix(black, $primary, 20), $primary);
-
-    svg {
-      stroke: #161d31 !important;
     }
   }
 }
