--- a/src/app/shared/third-part-modules/swiper/swiper.component.html
+++ b/src/app/shared/third-part-modules/swiper/swiper.component.html
@@ -1,3 +1,3 @@
-<swiper-container #swiper fmSwiper [config]="config" init="false">
+<swiper-container [style.height.px]="height" #swiper fmSwiper [config]="config" init="false">
   <ng-content></ng-content>
 </swiper-container>
