--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,8 @@
-<!-- vertical-layout -->
-<ng-container *ngIf="coreConfig.layout.type === 'vertical'">
+@if (coreConfig.layout.type === 'vertical') {
   <vertical-layout></vertical-layout>
-</ng-container>
-<!-- / vertical-layout -->
-
-<!-- horizontal-layout -->
-<ng-container *ngIf="coreConfig.layout.type === 'horizontal'">
+} @else if (coreConfig.layout.type === 'horizontal'){
   <horizontal-layout></horizontal-layout>
-</ng-container>
-<!-- / horizontal-layout -->
+}
 
 <!--<core-sidebar-->
 <!--  name="themeCustomizer"-->
