--- a/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
+++ b/src/app/layout/components/navbar/navbar-daily-tasks/navbar-daily-tasks.component.html
@@ -69,7 +69,7 @@
       <div class="progress-wrapper">
         <ngb-progressbar
           style="height: 1.3rem;"
-          type="primary"
+          type="success"
           class="mt-50"
           showValue="true"
           [value]="progress"
